# serverless-cpp-example

./: .dockerignore  .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  README.md  example.cpp  package.json  serverless.yml  test_example.cpp
